post delete headers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>
-  <!--<simple-http></simple-http>
-  <hr />-->
+  <simple-http></simple-http>
+  <hr />
   <youtube-search></youtube-search>
+  <hr />
+  <post-delete-headers-http></post-delete-headers-http>
 </h1>
